Changes for 2.1.5

New features:

Bug fixes:
...GI..PS. [ZBX-6955] fixed library order in linking, fixed compiler warnings, improved performance of zbx_snprintf_alloc() function (Andris)
........S. [ZBX-6981] fixed SQL error during lld trigger creation (wiper)
A......... [ZBX-6866] fixed beeing able to add graph items from other hosts for templated graphs (Ivo)
..F....... [ZBX-6854] fixed javascript error on pages with checkboxes, but without main checkbox (Vitalij)
..F....... [ZBX-6873] fixed errors in page switching after executing an action (Ivo)

--------------------------------------------------------------------------------
Changes for 2.1.4

New features:
A.F.I..PS. [ZBXNEXT-1633] implemented host prototypes (Pavels, Sasha)
.......PS. [ZBXNEXT-1633] implemented monitoring of vCenter and vSphere (Alexei, Sasha, wiper)

Bug fixes:
.......P.. [ZBX-6936] fixed MySQL errors when updating configuration of the proxy (Sasha)
.......P.. [ZBX-6929] fixed updating of lastlogsize and mtime in the proxy's database (Sasha)
....I..... [ZBX-6890] added missing indexes in child-tables for foreign key contraints, rename some indexes to meet naming convention (Andris)
..F....... [ZBX-6887] allowed to translate "Internal" in a different way in authentication, event and user context (Eduard)
A......... [ZBX-6124] removed unused API methods (Eduard)
..F....... [ZBX-6927] improved validation messages (Eduard)
..F....... [ZBX-6923] fixed mass delete in template list, improved code quality in hosts and templates (Vitalij)

--------------------------------------------------------------------------------
Changes for 2.1.3

New features:
..F....... [ZBXNEXT-317] enabled access to historical data for disabled hosts (Guntis, Ivo)
..F....... [ZBX-6896] list of media types for creating new medias in a user's profile sorted by name (Vitalij)
..F....... [ZBX-6868] maps default add icon defined in defines.inc.php (Vitalij)
.......PS. [ZBX-6852] removed support of iODBC (Sasha)